# curl-static-bin

./: CMakeLists.txt
lib/windows/: libcurl-x64.lib  libcurl.lib
